# AudioBookRequest

./: .coverage  .env.example  .gitignore  ASIN-FIXES-TODO.md  CHANGELOG-manual-removal.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_JOURNAL.md  INTEGRITY-RISKS.md  MANUAL-TESTING.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yaml  check-format.yaml  docs.yaml
alembic/versions/: 0d85a72ed857_add_metadatacache_table.py  99b1c4f5b85e_add_missing_fk_indexes.py  9b8c7d6e5f4a_add_freeleech_field.py  9c307d2a3b4f_add_user_last_login_field.py  f3b2a1c0d4e5_add_prowlarr_fields.py
app/: main.py
app/internal/: book_search.py  db_queries.py  env_settings.py  models.py  notifications.py  query.py
app/internal/auth/: authentication.py
app/internal/metadata/: __init__.py  google_books.py
app/internal/prowlarr/: prowlarr.py  search_integration.py  source_metadata.py  util.py
app/internal/ranking/: quality.py  quality_extract.py
app/routers/: auth.py  root.py  search.py  wishlist.py
app/routers/api/: requests.py  search.py  users.py
app/routers/api/settings/: account.py
app/routers/settings/: indexers.py
app/util/: author_matcher.py  cache.py  db.py  exceptions.py  fetch_js.py  log.py  templates.py
docs/content/docs/: troubleshooting.md
static/: tw.css
templates/: base.html  search.html
templates/wishlist_page/: base_wishlist.html  tablist.html  wishlist.html
tests/: README.md  conftest.py  test_api_endpoints.py  test_auth.py  test_book_search.py  test_cache.py  test_db_queries.py  test_notifications.py  test_prowlarr_search.py  test_query_download.py
tests/fixtures/: audible_responses.json  prowlarr_responses.json
